--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,14 @@ services:
     env_file: 
       - .env
   mongodb:
-    image: mongo
+    image: mongo:6-jammy
     ports:
       - "27017:27017"
     env_file: 
       - .env
     volumes:
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
       - mongodb_data:/data/db
-      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
   test:
     build:
       context: .
@@ -28,17 +28,13 @@ services:
     depends_on:
       - mongodb_test
   mongodb_test:
-    image: mongo
+    image: mongo:6-jammy
     ports:
       - "27018:27017"
-    environment:
-    - MONGO_INITDB_ROOT_USERNAME=test_user
-    - MONGO_INITDB_ROOT_PASSWORD=test_password
-    - MONGO_DB_NAME=test_db
     env_file: 
       - .env.test
     volumes:
-      - ./mongo-init-test.js:/docker-entrypoint-initdb.d/mongo-init.js
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
       - mongodb_test_data:/data/db
 
 volumes:
