--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - mongodb
     env_file: 
       - .env
+    volumes:
+      - .:/usr/src/app
   mongodb:
     image: mongo:6-jammy
     ports:
